# broker-data-collector

./: .gitignore  BrokerDataCollector.mq5  CHANGELOG.md  MASTER_PROMPT.md  MyAlert_AI_V1.0.txt  OPEN_TASKS.md  PROJECT_STATE.md  README.md  pyproject.toml
docs/: MYALERT_CATEGORICAL_CODES.md
myalert_enrich/: __init__.py  __main__.py  cli.py  config.py  default_config.json  enricher.py  ohlc.py  outcomes.py
myalert_validate/: __init__.py  __main__.py  checks.py  cli.py  default_config.json  eligibility.py  loader.py  models.py  recommendations.py  report.py  schema.py  scoring.py  validator.py
tests/: test_myalert_enrich.py  test_myalert_validate.py
