[project]
name = "broker-data-collector-tools"
version = "1.8.1"
description = "Post-processing tools for Broker Data Collector MyAlert research"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
myalert-enrich = "myalert_enrich.cli:main"
myalert-validate = "myalert_validate.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
